--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                         <li>
                                             <a href="/">Example Link</a>
                                             <ul>
-                                                <li><a href="/">Example Link</a></li>
+                                                <li><a href="/">страны</a></li>
                                                 <li><a href="/">Example Link</a></li>
                                                 <li><a href="/">Example Link</a></li>
                                             </ul>
