--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                             <a href="/">Example Link</a>
                                             <ul>
                                                 <li><a href="/">страны</a></li>
-                                                <li><a href="/">Example Link</a></li>
+                                                <li><a href="/">Example</a></li>
                                                 <li><a href="/">Example Link</a></li>
                                             </ul>
                                         </li>
