--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="container">
                     <div class="header-top__wrapper">
                         <a href="#" class="header__logo-link">
-                            <img class="header__logo" src="img/logo.png" alt="Global Expeditors">
+                            <img class="header__logo" src="img/logotype.png" alt="Global Expeditors">
                         </a>
                         <div class="header-top__panel">
                             <div class="header-top__row">
