nav menu example

--- a/index.html
+++ b/index.html
@@ -71,14 +71,92 @@
                     <div class="nav-container">  
                         <nav id="nav">
                             <ul>
-
                                 <!-- Menu tooggle on smaller screens  -->
                                 <li id="toggleMenu" role="button" aria-haspopup="true">
                                     <a href="/sitemap.html"><span class="icon-menu">&#9776;</span><span class="icon-menu-closed">X</span> Menu</a>
                                 </li>
 
                                 <!-- Simple menu item without sub menu -->
-                                <li><a href="https://vjdesign.com.au/">Логистика</a></li>
+                                <li>
+                                    <a href="#">Логистика</a>
+                                    <ul>
+                                        <li>
+                                            <a href="#">Страны</a>
+                                            <ul class="flex">
+                                                <li>
+                                    
+                                                        <a href="/">Европа</a>
+                                                        <ul>
+                                                            <li><a href="#">Германия</a></li>
+                                                            <li><a href="#">Турция</a></li>
+                                                            <li><a href="#">Венгрия</a></li>
+                                                            <li><a href="#">Словения</a></li>
+                                                            <li><a href="#">Швейцария</a></li>
+                                                            <li><a href="#">Нидерланды</a></li>
+                                                            <li><a href="#">Бельгия</a></li>
+                                                            <li><a href="#">Швеция</a></li>
+                                                            <li><a href="#">Норвегия</a></li>
+                                                            <li><a href="#">Болгария</a></li>
+                                                            <li><a href="#">Сербия</a></li>
+                                                            <li><a href="#">Словакия</a></li>
+                                                            <li><a href="#">Румыния</a></li>
+                                                            <li><a href="#">Дания</a></li>
+                                                            <li><a href="#">Беларусь</a></li>
+                                                            <li><a href="#">Великобритания</a></li>
+                                                            <li><a href="#">Австрия</a></li>
+                                                            <li><a href="#">Италия</a></li>
+                                                            <li><a href="#">Франция</a></li>
+                                                            <li><a href="#">Чехия</a></li>
+                                                            <li><a href="#">Польша</a></li>
+                                                            <li><a href="#">Финляндия</a></li>
+                                                            <li><a href="#">Испания</a></li>
+                                                            <li><a href="#">Литва</a></li>
+                                                            <li><a href="#">Эстония</a></li>
+                                                            <li><a href="#">Латвия</a></li>
+                                                            <li><a href="#">Греция</a></li>
+                                                            <li><a href="#">Португалия</a></li>
+                                                            <li><a href="#">Хорватия</a></li>
+                                                            <li><a href="#">Ирландия</a></li>
+                                                            <li><a href="#">Шотландия</a></li>
+                                                        </ul>
+                                                    </li>
+                                                    <li>
+                                                        <a href="/">Азия</a>
+                                                        <ul>
+                                                            <li><a href="#">Китай</a></li>
+                                                            <li><a href="#">Казахстан</a></li>
+                                                            <li><a href="#">Индия</a></li>
+                                                            <li><a href="#">Япония</a></li>
+                                                            <li><a href="#">Корея</a></li>
+                                                            <li><a href="#">Египет</a></li>
+                                                            <li><a href="#">Вьетнам</a></li>
+                                                            <li><a href="#">Тайланд</a></li>
+                                                            <li><a href="#">Грузия</a></li>
+                                                            <li><a href="#">Армения</a></li>
+                                                            <li><a href="#">Азербайджан</a></li>
+                                                        </ul>
+                                                    </li>
+                                                    <li>
+                                                        <a href="/">Америка</a>
+                                                        <ul>
+                                                            <li><a href="#">США</a></li>
+                                                            <li><a href="#">Мексика</a></li>
+                                                            <li><a href="#">Аргентина</a></li>
+                                                            <li><a href="#">Чили</a></li>
+                                                            <li><a href="#">Перу</a></li>
+                                                            <li><a href="#">Уругвай</a></li>
+                                                            <li><a href="#">Бразилия</a></li>
+                                                        </ul>
+                                                    </li>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li><a href="#">Виды грузоперевозок</a></li>
+                                        <li><a href="#">Виды транспорта</a></li>
+                                        <li><a href="#">Виды грузов</a></li>
+                                        <li><a href="#">Тарифы</a></li>
+                                    </ul>
+                                </li>
 
                                 <!--  Menu item with one sub menu -->
                                 <li>
@@ -86,7 +164,7 @@
 
                                     <ul>
                                         <li><a href="https://cferdinandi.github.io/kraken/">Таможенное оформление</a></li>
-                <li><a href="https://github.com/cferdinandi/keel">Keel</a></li>
+                                        <li><a href="https://github.com/cferdinandi/keel">Keel</a></li>
                                         <li><a href="https://github.com/cferdinandi/social-sharing/">О нас</a></li>
                                     </ul>
                                 </li>
@@ -104,7 +182,12 @@
                                             <ul>
                                                 <li><a href="/">страны</a></li>
                                                 <li><a href="/">Example</a></li>
+                                                <li><a href="/">Example Link</a>
+                                                <ul>
+                                                <li><a href="/">страны</a></li>
+                                                <li><a href="/">Example</a></li>
                                                 <li><a href="/">Example Link</a></li>
+                                            </ul></li>
                                             </ul>
                                         </li>
                                     </ul>
