from-germany page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                         <a href="#" class="header__soc-twitter"></a>
                                     </li>
                                     <li href="#" class="header__social-link">
-                                        <a href="#" class="header__soc-google-plus"></a>
+                                        <a href="from-germany.html" class="header__soc-google-plus"></a>
                                     </li>
                                 </ul>
                     </div>
