--- a/index.html
+++ b/index.html
@@ -432,16 +432,16 @@
             <div class="container">
                 <div class="about__row">
                     <div class="about__text-wrap">
-                        <h4 class="about__title">
-                            Регулярные грузоперевозки между Германией и Россией
-                        </h4>
+                        <h2>
+                            <a class="about__title" href="from-germany.html">
+                                Регулярные грузоперевозки между Германией и Россией
+                            </a>
+                        </h2>
                         <p class="about__text">
-                            Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру 
-                            сгенерировать несколько абзацев более менее осмысленного текста 
-                            рыбы на русском языке, а начинающему оратору отточить навык 
-                            публичных выступлений в домашних условиях. При создании 
-                            генератора мы использовали небезизвестный универсальный 
-                            код речей.
+                            Наша компания оказывает полный спектр услуг по грузоперевозке для физических и юридических лиц: оформим документы, 
+                            застрахуем, соберем, упакуем, погрузим, доставим, растаможим. 
+                            Перевезем для вас любые грузы: генеральные и негабаритные, сборные или отдельным транспортом. 
+                            Разработаем оптимальный маршрут по земле, морю и воздуху.
                         </p>
                     </div>
                     <div class="about__img-wrap">
@@ -475,12 +475,11 @@
                         </div>
                         <div class="about__video-text">
                             <p>
-                                Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности 
-                                обеспечивает широкому кругу (специалистов) участие в формировании форм развития. 
-                                Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности 
-                                представляет собой интересный эксперимент проверки систем массового участия. 
-                                Товарищи! укрепление и развитие структуры обеспечивает широкому кругу (специалистов) 
-                                участие в формировании направлений прогрессивного развития.
+                                Мы возьмем на себя не только непосредственную доставку вашего груза, 
+                                но и все хлопоты по его таможенному оформлению: поможем составить внешнеторговый контракт, 
+                                рассчитать таможенные платежи, правильно определить код номенклатуры ВЭД, заполним таможенную декларацию, 
+                                проверим наличие всех необходимых документов, представим ваши интересы непосредственно на таможне, 
+                                предоставим склад для хранения вашей продукции.
                             </p>
                         </div>
                     </div>
