--- a/from-germany.html
+++ b/from-germany.html
@@ -17,8 +17,7 @@
 	<!-- <script src="js/jquery-3.6.0.min"></script> -->
     
 </head>
- 
- 
+
 <body>
     <div class="wrapper">
         <div class="side-nav">
@@ -1530,121 +1529,94 @@
                 <div class="info__row">
                     <div class="info__wrap">
                         <div class="info__left">
-                            <h4 class="info__sub-title">Таможенное оформление</h4>
+                            <h3 class="info__sub-cap">Международные документы, регулирующие грузоперевозки</h3>
+                            <h4 class="info__sub-title">Морские перевозки</h4>
                             <ul class="info__list">
                                 <li class="info__items">
                                     <a href="#" class="info__link">
-                                        Таможенный осмотр и досмотр товаров 
+                                        Конвенция ООН о морской перевозке грузов (Гамбургские правила, 1978)
                                     </a>
                                 </li>
                                 <li class="info__items">
                                     <a href="#" class="info__link">
-                                        Зоны таможенного контроля
+                                        Конвенция ООН об ответственности операторов транспортных терминалов в международной торговле (1991)
                                     </a>
                                 </li>
                                 <li class="info__items">
                                     <a href="#" class="info__link">
-                                        Как оформить груз в таможенных органах 
-                                    </a>
-                                </li>
-                                <li class="info__items">
-                                    <a href="#" class="info__link">
-                                        Таможенное оформление товаров
-                                    </a>
-                                </li>
-                                <li class="info__items">
-                                    <a href="#" class="info__link">
-                                        Особенности корректировки таможенной стоимости
-                                    </a>
-                                </li>
-                                <li class="info__items">
-                                    <a href="#" class="info__link">
-                                        Что такое таможенное оформление товаров в России
-                                    </a>
-                                </li>
-                                <li class="info__items">
-                                    <a href="#" class="info__link">
-                                        Таможенное оформление товаров в Российской Федерации
-                                    </a>
-                                </li>
-                                <li class="info__items">
-                                    <a href="#" class="info__link">
-                                        Таможенная регистрация грузов, транспортируемых через границу
+                                        Конвенция ООН о договорах полностью или частично морской международной перевозки грузов (Роттердамские правила, 2008) 
                                     </a>
                                 </li>
                             </ul>
-                            <h4 class="info__sub-title">Прочее</h4>
+                            <h4 class="info__sub-title">Авиаперевозки</h4>
                             <ul class="info__list">
                                 <li class="info__items">
                                     <a href="#" class="info__link">
-                                        Что важнее: скорость или цена перевозки? 
+                                        Конвенция для унификации некоторых правил, касающихся международных воздушных перевозок (Варшавская конвенция, 1929)
                                     </a>
                                 </li>
                                 <li class="info__items">
                                     <a href="#" class="info__link">
-                                        Сфера работы логистических компаний
+                                        Конвенция для унификации некоторых правил международных воздушных перевозок (Монреальская конвенция, 1999)
                                     </a>
                                 </li>
                             </ul>
-                        </div>
-                        <div class="info__right">
-                            <h4 class="info__sub-title">Таможенное оформление</h4>
+                            <h4 class="info__sub-title">Автомобильные перевозки</h4>
                             <ul class="info__list">
                                 <li class="info__items">
                                     <a href="#" class="info__link">
-                                        Таможенный осмотр и досмотр товаров 
+                                        Конвенция о договоре международной перевозки грузов по дорогам (КДПГ) (1978)
                                     </a>
                                 </li>
                                 <li class="info__items">
                                     <a href="#" class="info__link">
-                                        Зоны таможенного контроля
-                                    </a>
-                                </li>
-                                <li class="info__items">
-                                    <a href="#" class="info__link">
-                                        Как оформить груз в таможенных органах 
-                                    </a>
-                                </li>
-                                <li class="info__items">
-                                    <a href="#" class="info__link">
-                                        Таможенное оформление товаров
-                                    </a>
-                                </li>
-                                <li class="info__items">
-                                    <a href="#" class="info__link">
-                                        Особенности корректировки таможенной стоимости
-                                    </a>
-                                </li>
-                                <li class="info__items">
-                                    <a href="#" class="info__link">
-                                        Что такое таможенное оформление товаров в России
-                                    </a>
-                                </li>
-                                <li class="info__items">
-                                    <a href="#" class="info__link">
-                                        Таможенное оформление товаров в Российской Федерации
-                                    </a>
-                                </li>
-                                <li class="info__items">
-                                    <a href="#" class="info__link">
-                                        Таможенная регистрация грузов, транспортируемых через границу
+                                        Европейское соглашение о международной дорожной перевозке опасных грузов (ДОПОГ) 
                                     </a>
                                 </li>
                             </ul>
-                            <h4 class="info__sub-title">Прочее</h4>
+                            <h4 class="info__sub-title">Железнодорожные перевозки</h4>
                             <ul class="info__list">
                                 <li class="info__items">
                                     <a href="#" class="info__link">
-                                        Что важнее: скорость или цена перевозки? 
+                                        Конвенция о международных железнодорожных перевозках (КОТИФ) (1980)
                                     </a>
                                 </li>
                                 <li class="info__items">
                                     <a href="#" class="info__link">
-                                        Сфера работы логистических компаний
+                                        Соглашение о Международном железнодорожном грузовом сообщении (СМГС) (редакция 2021)
+                                    </a>
+                                </li>
+                            </ul>
+                            <h3 class="info__sub-cap">Международные документы, регулирующие грузоперевозки</h3>
+                            <ul class="info__list">
+                                <li class="info__items">
+                                    <a href="#" class="info__link">
+                                        Кодекс торгового мореплавания Российской Федерации (редакция 2021)
+                                    </a>
+                                </li>
+                                <li class="info__items">
+                                    <a href="#" class="info__link">
+                                        Кодекс внутреннего водного транспорта Российской Федерации (редакция 2021)
+                                    </a>
+                                </li>
+                                <li class="info__items">
+                                    <a href="#" class="info__link">
+                                        Воздушный кодекс Российской Федерации (редакция 2021)
+                                    </a>
+                                </li>
+                                <li class="info__items">
+                                    <a href="#" class="info__link">
+                                        Устав автомобильного транспорта и городского наземного электрического транспорта (редакция 2021)
+                                    </a>
+                                </li>
+                                <li class="info__items">
+                                    <a href="#" class="info__link">
+                                        Устав железнодорожного транспорта Российской Федерации (редакция 2021)
                                     </a>
                                 </li>
                             </ul>
                         </div>
+                        
                     </div>
                     <div class="info__img-wrap">
                         <img class="info__img" src="img/info1.jpg" alt="#">
