last changes germany

--- a/#src/index.html
+++ b/#src/index.html
@@ -81,7 +81,7 @@
                                     <ul class='dropdown2'>
                                         <li><a href='#'>Европа<span class='toggle3'></span></a>
                                             <ul class='dropdown3'>
-                                                <li><a class="germany" href='#'>Германия</a></li>
+                                                <li><a class="germany" href='from-germany.html'>Германия</a></li>
                                                 <li><a class="turkey" href='#'>Турция</a></li>
                                                 <li><a class="hungary" href='#'>Венгрия</a></li>
                                                 <li><a class="slovenia" href='#'>Словения</a></li>
