--- a/from-germany.html
+++ b/from-germany.html
@@ -161,14 +161,35 @@
                             </ul>
                             </li>
                             <li><a href='#'>ВЭД<span class='toggle'></a>
-                            <ul class='dropdown'>
-                                <li><a href='#'>Cortana</a></li>
-                                <li><a href='#'>Xboct</a></li>
-                                <li><a href='#'>Microsoft Edge</a></li>
-                            </ul>
+                                <ul class='dropdown'>
+                                    <li><a href='#'>Инкотермс</a></li>
+                                    <li><a href='#'>Международная торговля</a></li>
+                                    <li><a href='#'>Экспорт из России</a></li>
+                                    <li><a href='#'>Импорт в Россию</a></li>
+                                </ul>
                             </li>
-                            <li><a href='#'>Таможенное оформление</a></li>
-                            <li><a href='#'>О нас</a></li>
+                            <li><a href='#'>Таможенное оформление<span class='toggle'></a>
+                                <ul class='dropdown'>
+                                    <li><a href='#'>Виды оформления</a></li>
+                                    <li><a href='#'>Ауторсинг</a></li>
+                                    <li><a href='#'>Места оформления</a></li>
+                                    <li><a href='#'>Тарифы</a></li>
+                                </ul>
+                            </li>
+                            <li><a href='#'>О нас<span class='toggle'></a>
+                                <ul class='dropdown'>
+                                    <li><a href='#'>Наша команда</a></li>
+                                    <li><a href='#'>СМИ о наc</a></li>
+                                    <li><a href='#'>Отзывы</a></li>
+                                    <li><a href='#'>Контакты</a></li>
+                                    <li><a href='#'>Интернет-магазин</a></li>
+                                    <li><a href='#'>Страхование</a></li>
+                                    <li><a href='#'>Отслеживание грузов</a></li>
+                                    <li><a href='#'>Мобильное приложение</a></li>
+                                    <li><a href='#'>Акции</a></li>
+                                    <li><a href='#'>FAQ (частые вопросы)</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </nav>  
                 </div>
