--- a/from-germany.html
+++ b/from-germany.html
@@ -20,7 +20,7 @@
 
 <body>
     <div class="wrapper">
-        <div class="side-nav">
+        <!-- <div class="side-nav">
             <ul class="side-nav__list">
                 <li class="side-nav__item"><a href="#about" class="side-nav__link active">Описание</a></li>
                 <li class="side-nav__item"><a href="#imp-exp" class="side-nav__link">Виды транспорта</a></li>
@@ -29,7 +29,7 @@
                 <li class="side-nav__item"><a href="#docs" class="side-nav__link">Документы</a></li>
                 <li class="side-nav__item"><a href="#info" class="side-nav__link">Полезные ссылки</a></li>                           
             </ul>
-        </div>
+        </div> -->
         <header class="header">
             <div class="header-top">
                 <div class="container">
@@ -189,6 +189,17 @@
                                     <li><a href='#'>Акции</a></li>
                                     <li><a href='#'>FAQ (частые вопросы)</a></li>
                                 </ul>
+                            </li>
+                            <li>
+                                <select class="core-menu__select">
+                                    <option class="core-menu__select-item">От куда</option>
+                                    <option class="core-menu__select-item">Германия</option>
+                                    <option class="core-menu__select-item">США</option>
+                                    <option class="core-menu__select-item">Япония</option>
+                                </select>
+                            </li>
+                            <li>
+                                <button class="core-menu__calc-btn" type="button" >Расчитать стоимость</button>
                             </li>
                         </ul>
                     </nav>  
