--- a/#src/from-germany.html
+++ b/#src/from-germany.html
@@ -213,7 +213,7 @@
                 <div class="from-germany__slide from-germany__slide--1">
                     <div class="container">
                         <div class="from-germany__text-wrap">
-                            <h2 class="from-germany__title">Перевозка грузов: Германия</h2>
+                            <h1 class="from-germany__title">Перевозка грузов: Германия</h1>
                             <p class="from-germany__text">
                                 Полный спект услуг связанных 
                                 с&nbsp;грузоперевозками,
@@ -223,7 +223,7 @@
                         <div class="from-germany__select-area">
 
                             <div class="from-germany__info-block">
-                                <h5 class="from-germany__info-title">Грузоперевозки из Германии</h5>
+                                <h2 class="from-germany__info-title">Грузоперевозки из Германии</h2>
                                 <p class="from-germany__info-text">Безопасная и оперативная услуга европейского уровня качества. 
                                     Мы осуществляем независимые от субъективных и объективных обстоятельств международные грузоперевозки 
                                     оперативно и по доступному большинству заказчиков прайсу.
@@ -238,7 +238,7 @@
                 <div class="from-germany__slide from-germany__slide--2">
                     <div class="container">
                         <div class="from-germany__text-wrap">
-                            <h2 class="from-germany__title">Перевозка грузов: Германия</h2>
+                            <h1 class="from-germany__title">Перевозка грузов: Германия</h1>
                             <p class="from-germany__text">
                                 Полный спект услуг связанных 
                                 с&nbsp;грузоперевозками,
@@ -248,7 +248,7 @@
                         <div class="from-germany__select-area">
 
                             <div class="from-germany__info-block">
-                                <h5 class="from-germany__info-title">Грузоперевозки из Германии</h5>
+                                <h2 class="from-germany__info-title">Грузоперевозки из Германии</h2>
                                 <p class="from-germany__info-text">Безопасная и оперативная услуга европейского уровня качества. 
                                     Мы осуществляем независимые от субъективных и объективных обстоятельств международные грузоперевозки 
                                     оперативно и по доступному большинству заказчиков прайсу.
@@ -263,7 +263,7 @@
                 <div class="from-germany__slide from-germany__slide--3">
                     <div class="container">
                         <div class="from-germany__text-wrap">
-                            <h2 class="from-germany__title">Перевозка грузов: Германия</h2>
+                            <h1 class="from-germany__title">Перевозка грузов: Германия</h1>
                             <p class="from-germany__text">
                                 Полный спект услуг связанных 
                                 с&nbsp;грузоперевозками,
@@ -273,7 +273,7 @@
                         <div class="from-germany__select-area">
 
                             <div class="from-germany__info-block">
-                                <h5 class="from-germany__info-title">Грузоперевозки из Германии</h5>
+                                <h2 class="from-germany__info-title">Грузоперевозки из Германии</h2>
                                 <p class="from-germany__info-text">Безопасная и оперативная услуга европейского уровня качества. 
                                     Мы осуществляем независимые от субъективных и объективных обстоятельств международные грузоперевозки 
                                     оперативно и по доступному большинству заказчиков прайсу.
@@ -288,7 +288,7 @@
                 <div class="from-germany__slide from-germany__slide--4">
                     <div class="container">
                         <div class="from-germany__text-wrap">
-                            <h2 class="from-germany__title">Перевозка грузов: Германия</h2>
+                            <h1 class="from-germany__title">Перевозка грузов: Германия</h1>
                             <p class="from-germany__text">
                                 Полный спект услуг связанных 
                                 с&nbsp;грузоперевозками,
@@ -298,7 +298,7 @@
                         <div class="from-germany__select-area">
 
                             <div class="from-germany__info-block">
-                                <h5 class="from-germany__info-title">Грузоперевозки из Германии</h5>
+                                <h2 class="from-germany__info-title">Грузоперевозки из Германии</h2>
                                 <p class="from-germany__info-text">Безопасная и оперативная услуга европейского уровня качества. 
                                     Мы осуществляем независимые от субъективных и объективных обстоятельств международные грузоперевозки 
                                     оперативно и по доступному большинству заказчиков прайсу.
@@ -1811,6 +1811,117 @@
             <div class="container">
                 <div class="service__plunk"></div>
                 <h2 class="service__title">Окажем все необходимые услуги</h2>
+                <div class="vertical-tabs">
+                <ul class="tabs vertical" data-tab="">
+                    <li class="tab-title active"><a href="#panela1" aria-selected="true" tabindex="0">Виды товаров</a></li>
+                    <li class="tab-title"><a href="#panelb1" aria-selected="false" tabindex="-1">Виды транспорта</a></li>
+                    <li class="tab-title"><a href="#panelc1" aria-selected="false" tabindex="-1">Виды грузоперевозок</a></li>
+                </ul>
+                <div class="tabs-content">
+                    <div class="content active" id="panela1" aria-hidden="false" >
+                        <div class="service__links">
+                            <a href="#" class="service__link">
+                                <div class="service__item">
+                                    <img class="service__img" src="img/ser6.jpg" alt="#">
+                                    <span class="service__link-cap">Генеральные</span>
+                                </div>
+                            </a>
+                            <a href="#" class="service__link">
+                                <div class="service__item">
+                                    <img class="service__img" src="img/ser7.jpg" alt="#">
+                                    <span class="service__link-cap">Сыпучие</span>
+                                </div>
+                            </a>
+                            <a href="#" class="service__link">
+                                <div class="service__item">
+                                    <img class="service__img" src="img/ser8.jpg" alt="#">
+                                    <span class="service__link-cap">Наливные</span>
+                                </div>
+                            </a>
+                            <a href="#" class="service__link">
+                                <div class="service__item">
+                                    <img class="service__img" src="img/ser9.jpg" alt="#">
+                                    <span class="service__link-cap">Специальные</span>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="content" id="panelb1" aria-hidden="true" tabindex="-1">
+                        <div class="service__links">
+                            <a href="#" class="service__link">
+                                <div class="service__item">
+                                    <img class="service__img" src="img/ser1.jpg" alt="#">
+                                    <span class="service__link-cap">Авиа</span>
+                                </div>
+                            </a>
+                            <a href="#" class="service__link">
+                                <div class="service__item">
+                                    <img class="service__img" src="img/ser2.jpg" alt="#">
+                                    <span class="service__link-cap">Авто</span>
+                                </div>
+                            </a>
+                            <a href="#" class="service__link">
+                                <div class="service__item">
+                                    <img class="service__img" src="img/ser3.jpg" alt="#">
+                                    <span class="service__link-cap">Мультимодальные</span>
+                                </div>
+                            </a>
+                            <a href="#" class="service__link">
+                                <div class="service__item">
+                                    <img class="service__img" src="img/ser4.jpg" alt="#">
+                                    <span class="service__link-cap">ЖД</span>
+                                </div>
+                            </a>
+                            <a href="#" class="service__link">
+                                <div class="service__item">
+                                    <img class="service__img" src="img/ser5.jpg" alt="#">
+                                    <span class="service__link-cap">Морские</span>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="content" id="panelc1" aria-hidden="true" tabindex="-1">
+                    <div class="service__links">
+                            <a href="#" class="service__link">
+                                <div class="service__item">
+                                    <img class="service__img" src="img/ser10.jpg" alt="#">
+                                    <span class="service__link-cap">Международные</span>
+                                </div>
+                            </a>
+                            <a href="#" class="service__link">
+                                <div class="service__item">
+                                    <img class="service__img" src="img/ser11.jpg" alt="#">
+                                    <span class="service__link-cap">Локальные</span>
+                                </div>
+                            </a>
+                            <a href="#" class="service__link">
+                                <div class="service__item">
+                                    <img class="service__img" src="img/ser12.jpg" alt="#">
+                                    <span class="service__link-cap">Типы транспортировки</span>
+                                </div>
+                            </a>
+                            <a href="#" class="service__link">
+                                <div class="service__item">
+                                    <img class="service__img" src="img/ser13.jpg" alt="#">
+                                    <span class="service__link-cap">Отдельный транспорт</span>
+                                </div>
+                            </a>
+                            <a href="#" class="service__link">
+                                <div class="service__item">
+                                    <img class="service__img" src="img/ser14.jpg" alt="#">
+                                    <span class="service__link-cap">Способы доставки</span>
+                                </div>
+                            </a>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- <section class="service">
+            <div class="container">
+                <div class="service__plunk"></div>
+                <h2 class="service__title">Окажем все необходимые услуги</h2>
                 <div class="service__row">
                     <div class="service__buttons">
                         <button class="service__btn" type="button">Страны</button>
@@ -1852,7 +1963,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <footer class="footer">
             <div class="container">
