--- a/#src/from-germany.html
+++ b/#src/from-germany.html
@@ -787,13 +787,13 @@
                             </div>
                             <div class="route__comparison">
                                 <ul class="route__benefit">
-                                    <li class="route__plus">Оптимально для перевозки техники и сырья</li>
+                                    <li class="route__plus"><span>Оптимально для перевозки техники и сырья</span></li>
                                     <li class="route__plus">Постоянный контроль</li>
                                     <li class="route__plus"><span>Строгое соблюдение сроков</span></li>
                                 </ul>
                                 <div class="route__line"></div>
                                 <ul class="route__negative">
-                                    <li class="route__minus">Привязка к определенному маршруту</li>
+                                    <li class="route__minus"><span>Привязка к определенному маршруту</span></li>
                                     <li class="route__minus"><span>Непрактично на малых расстояниях</span></li>
                                     <li class="route__minus"><span>Невысокая скорость</span></li>
                                 </ul>
@@ -816,10 +816,10 @@
                             </div>
                             <div class="route__comparison">
                                 <ul class="route__benefit">
-                                    <li class="route__plus">Откуда угодно и куда угодно</li>
+                                    <li class="route__plus"><span>Откуда угодно и куда угодно</span></li>
                                     <li class="route__plus">Низкая стоимость</li>
                                     <li class="route__plus"><span>Готовые маршруты</span></li>
-                                    <li class="route__plus">Единый договор перевозки</li>
+                                    <li class="route__plus"><span>Единый договор перевозки</span></li>
                                     <li class="route__plus">Оформление документов</li>
                                     <li class="route__plus"><span>Весь процесс в одних руках</span></li>
                                 </ul>
@@ -1285,7 +1285,7 @@
                         весе и объеме.
                     </p>
                 </div>
-                <div class="pricing__row">
+                <div class="pricing__row pricing__row--2">
                     <div class="pricing__list-wrap">
                         <h3 class="pricing__sub-title title">Из чего складывается стоимость</h3>
                         <ul class="pricing__list">
@@ -1813,9 +1813,9 @@
                 <h2 class="service__title">Окажем все необходимые услуги</h2>
                 <div class="vertical-tabs">
                 <ul class="tabs vertical" data-tab="">
-                    <li class="tab-title active"><a href="#panela1" aria-selected="true" tabindex="0">Виды товаров</a></li>
-                    <li class="tab-title"><a href="#panelb1" aria-selected="false" tabindex="-1">Виды транспорта</a></li>
-                    <li class="tab-title"><a href="#panelc1" aria-selected="false" tabindex="-1">Виды грузоперевозок</a></li>
+                    <li class="tab-title active"><a class="service__btn" href="#panela1" aria-selected="true" tabindex="0">Виды товаров</a></li>
+                    <li class="tab-title"><a class="service__btn" href="#panelb1" aria-selected="false" tabindex="-1">Виды транспорта</a></li>
+                    <li class="tab-title"><a class="service__btn" href="#panelc1" aria-selected="false" tabindex="-1">Виды грузоперевозок</a></li>
                 </ul>
                 <div class="tabs-content">
                     <div class="content active" id="panela1" aria-hidden="false" >
