--- a/from-germany.html
+++ b/from-germany.html
@@ -551,7 +551,12 @@
                 <div class="container">
                     <div class="about__row">
                         <div class="about__video-wrap">
-                            <img class="about__img-video" src="img/video.jpg" alt="#">
+                            <video class="about__video" src="video/video.mp4" autoplay="true" loop="true" muted="true" poster="img/video.jpg">
+                                Sorry, your browser doesn't support embedded videos,
+                                but don't worry, you can <a href="videofile.ogg">download it</a>
+                                and watch it with your favorite video player!
+                            </video>
+                            <!-- <img class="about__img-video" src="img/video.jpg" alt="#"> -->
                         </div>
                         <div class="about__video-text">
                             <p>
