--- a/from-germany.html
+++ b/from-germany.html
@@ -209,7 +209,7 @@
         </header>
 
         <section class="from-germany" id="from-germany">
-            <div class="main-slider">    
+            <div class="main-slider desktop">    
                 <div class="from-germany__slide from-germany__slide--1">
                     <div class="container">
                         <div class="from-germany__text-wrap">
@@ -311,6 +311,75 @@
                     </div>
                 </div>
             </div>
+
+            <div class="main-slider mobile">    
+                <div class="from-germany__slide-mob from-germany__slide-mob--1">
+                    <div class="container">
+                        <div class="from-germany__text-wrap">
+                            <h1 class="from-germany__title">Перевозка грузов: Германия</h1>
+                            <p class="from-germany__text">
+                                Полный спект услуг связанных 
+                                с&nbsp;грузоперевозками,
+                                таможенным оформлением и ВЭД
+                            </p>
+                        </div>
+                    </div>
+                    <div class="from-germany__mask"></div>
+                </div>
+                <div class="from-germany__slide-mob from-germany__slide-mob--2">
+                    <div class="container">
+                        <div class="from-germany__text-wrap">
+                            <h1 class="from-germany__title">Перевозка грузов: Германия</h1>
+                            <p class="from-germany__text">
+                                Полный спект услуг связанных 
+                                с&nbsp;грузоперевозками,
+                                таможенным оформлением и ВЭД
+                            </p>
+                        </div>
+                    </div>
+                    <div class="from-germany__mask"></div>
+                </div>
+                <div class="from-germany__slide-mob from-germany__slide-mob--3">
+                    <div class="container">
+                        <div class="from-germany__text-wrap">
+                            <h1 class="from-germany__title">Перевозка грузов: Германия</h1>
+                            <p class="from-germany__text">
+                                Полный спект услуг связанных 
+                                с&nbsp;грузоперевозками,
+                                таможенным оформлением и ВЭД
+                            </p>
+                        </div>
+                    </div>
+                    <div class="from-germany__mask"></div>
+                </div>
+                <div class="from-germany__slide-mob from-germany__slide-mob--4">
+                    <div class="container">
+                        <div class="from-germany__text-wrap">
+                            <h1 class="from-germany__title">Перевозка грузов: Германия</h1>
+                            <p class="from-germany__text">
+                                Полный спект услуг связанных 
+                                с&nbsp;грузоперевозками,
+                                таможенным оформлением и ВЭД
+                            </p>
+                        </div>
+                    </div>
+                    <div class="from-germany__mask"></div>
+                </div>
+                
+            </div>
+            <div class="from-germany__mob-content">
+                <div class="container">
+                    <div class="from-germany__info-block-mob">
+                        <h2 class="from-germany__info-title">Грузоперевозки из Германии</h2>
+                        <p class="from-germany__info-text">Безопасная и оперативная услуга европейского уровня качества. 
+                            Мы осуществляем независимые от субъективных и объективных обстоятельств международные грузоперевозки 
+                            оперативно и по доступному большинству заказчиков прайсу.
+                        </p>
+                        <button class="from-germany__btn" type="button">Расчитать стоимость</button>
+                    </div>
+                </div>   
+            </div> 
+                        
         </section>
 
          <section class="import">
@@ -332,7 +401,7 @@
                     <div class="table-slider">
                         <div>
                         <div class="import__table-wrap">
-                            <h4 class="import__table-title">Структура импорта по данным за 2019 год</h4>
+                            <h4 class="import__table-title">Структура импорта по&nbsp;данным за 2019 год</h4>
                             <table class="import__table">
                                 <tr>
                                     <th class="import__table-th">Группа товаров</th>
@@ -1422,7 +1491,7 @@
                                 </a>
                             </li>
                             <li class="docs__items">
-                                <a href="#" class="docs__link">
+                                <a href="img/ser8.jpg" target="blank" class="docs__link">
                                     Упаковочный лист (Packing list)
                                 </a>
                             </li>
