mobile version beta

--- a/#src/from-germany.html
+++ b/#src/from-germany.html
@@ -1999,7 +1999,7 @@
             <div class="container">
                 <h2 class="docs__title title">Документы</h2>
                 <h3 class="docs__sub-title">Перечень документов необходимый для перевозки грузов:</h3>
-                <div class="docs__wrap">
+                <div class="docs__wrap hide">
                     <div class="docs__decor docs__decor--1"></div>
                     <div class="docs__decor docs__decor--2"></div>
                     <div class="docs__import">
@@ -2137,6 +2137,9 @@
                         </ul>
                     </div>
                 </div>
+
+                <a class="docs__content-toggle" href="#">Показать больше </a>
+
                 <h4 class="docs__sub-title">Примеры заполнения документов</h4>
                 <div class="slider">
                         <a class='docs__slider-item-link' href="example-docs/1kuplya-prodajha.pdf" target="blank">
@@ -2352,9 +2355,9 @@
             <div class="container">
                 <h2 class="info__title title">Полезно знать</h2>
                 <div class="info__row">
-                    <div class="info__wrap">
+                    <div class="info__wrap hide">
                         <div class="info__left">
-                            <h3 class="info__sub-cap">Международные документы, регулирующие грузоперевозки</h3>
+                            <h3 class="info__sub-cap info__sub-cap--2">Международные документы, регулирующие грузоперевозки</h3>
                             <h4 class="info__sub-title">Морские перевозки</h4>
                             <div class="info__decor-line"></div>
                             <ul class="info__list">
@@ -2416,7 +2419,7 @@
                                     </a>
                                 </li>
                             </ul>
-                            <h3 class="info__sub-cap">Международные документы, регулирующие грузоперевозки</h3>
+                            <h3 class="info__sub-cap">Документы РФ, регулирующие грузоперевозки</h3>
                             <ul class="info__list">
                                 <li class="info__items">
                                     <a href="https://docs.cntd.ru/document/901732423" class="info__link" target="blank">
@@ -2445,8 +2448,8 @@
                                 </li>
                             </ul>
                         </div>
-                        
                     </div>
+                    <a class="info__content-toggle" href="#">Показать больше </a>
                     <div class="info__img-wrap">
                         <img class="info__img" src="img/info1.jpg" alt="#">
                         <img class="info__img" src="img/info2.jpg" alt="#">
