mobile version beta

--- a/#src/from-germany.html
+++ b/#src/from-germany.html
@@ -2455,7 +2455,7 @@
                     </div>
                     <div class="info__btn-wrap">
                         <a class="info__content-toggle" href="#">Показать больше </a> 
-                        <!-- <span class="info__arrow">&#8963;</span> -->
+                        <span class="info__arrow">&#8963;</span>
                     </div>
                     <!-- <a class="info__content-toggle" href="#">Показать больше </a> -->
                     <div class="info__img-wrap">
