--- a/index.html
+++ b/index.html
@@ -621,6 +621,23 @@
                     </p>
                 </div>
             </div>
+            <ul class="welcome__socials">
+                <li href="#" class="welcome__social-link">
+                    <a class="welcome__soc-facebook"></a>
+                </li> 
+                <li href="#" class="welcome__social-link">
+                    <a href="#"  class="welcome__soc-youtube"></a>
+                </li>
+                <li href="#" class="welcome__social-link">
+                    <a href="#" class="welcome__soc-inst"></a>
+                </li> 
+                <li href="#" class="welcome__social-link">
+                    <a href="#" class="welcome__soc-twitter"></a>
+                </li>
+                <li href="#" class="welcome__social-link">
+                    <a href="#" class="welcome__soc-google-plus"></a>
+                </li>
+            </ul>
         </section>
 
         <section class="about-us">
